--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 * {
     padding : 0px;
     margin : 0px;
-    box-sizing: border-box;
+    box-sizing: border-box; /* 구글링 */
 }
 header {
     background-image: url("../images/background.jpg");
