--- a/css/styles.css
+++ b/css/styles.css
@@ -89,3 +89,73 @@ table{
     border: 0;
     cursor : pointer;
 }
+
+main {
+    margin: 30px 80px; /* 세로 가로 */
+}
+
+section {
+    margin : 30px 0;
+}
+
+.sec__title {
+    font-size : 25px;
+    font-weight: 800;
+    color : rogb(66,66,66);
+}
+
+.card__box {
+    display : grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; /* grid-gap : 10px; */
+    grid-column-gap : 10px;
+    margin-top : 20px;
+}
+
+.card__img {
+    background-image: url("../images/card1.jpg");
+    height: 70px;
+    background-size: 100% 100%;
+}
+
+.card {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    border : 1px solid rgb(210, 210, 210);
+    border-radius: 6px;
+    box-shadow: 0 3px 3px 0 rgb(170,170,170);
+}
+
+.card__content {
+    display : grid;
+    align-items: center;
+    margin-left : 10px;
+    font-weight: 600;
+}
+
+.ad1 {
+    background-image: url("../images/ad1.jpg");
+    height : 350px;
+    background-size: 100% 100%;
+    border-radius: 20px;
+}
+
+.choo__box {
+    display : grid;
+    grid-template-columns : 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap : 10px;
+    margin-top : 20px;
+}
+
+.choo__img {
+    background-image: url("../images/choo1.png");
+    height : 250px;
+    background-size: 100% 100%;
+}
+
+.ad2 {
+    background-image : url("../images/ad2.png");
+    height : 300px;
+    background-size: 100% 100%;
+    margin-top : 20px;
+}
+
