--- a/css/styles.css
+++ b/css/styles.css
@@ -112,9 +112,21 @@ section {
 }
 
 .card__img {
-    background-image: url("../images/card1.jpg");
     height: 70px;
     background-size: 100% 100%;
+}
+
+.card__img1 {
+    background-image: url("../images/card1.jpg");
+}
+.card__img2 {
+    background-image: url("../images/card2.jpg");
+}
+.card__img3 {
+    background-image: url("../images/card3.jpg");
+}
+.card__img4 {
+    background-image: url("../images/card4.jpg");
 }
 
 .card {
@@ -147,9 +159,23 @@ section {
 }
 
 .choo__img {
-    background-image: url("../images/choo1.png");
     height : 250px;
     background-size: 100% 100%;
+}
+.choo__img1{
+    background-image: url("../images/choo1.png");
+}
+.choo__img2{
+    background-image: url("../images/choo2.png");
+}
+.choo__img3{
+    background-image: url("../images/choo3.png");
+}
+.choo__img4{
+    background-image: url("../images/choo4.png");
+}
+.choo__img5{
+    background-image: url("../images/choo5.png");
 }
 
 .ad2 {
@@ -160,7 +186,47 @@ section {
 }
 
 .home__img {
+    height : 180px;
+    background-size: 100% 100%;
+}
+
+.home__img1 {
     background-image : url("../images/home1.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img2 {
+    background-image : url("../images/home2.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img3 {
+    background-image : url("../images/home3.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img4 {
+    background-image : url("../images/home4.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img5 {
+    background-image : url("../images/home5.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img6 {
+    background-image : url("../images/home6.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img7 {
+    background-image : url("../images/home7.png");
+    height : 180px;
+    background-size: 100% 100%;
+}
+.home__img8 {
+    background-image : url("../images/home8.png");
     height : 180px;
     background-size: 100% 100%;
 }
